# RoboDuet_Deployment

./: .gitignore  README.md  controller.py
go1_deployment/go1_gym/: setup.py
go1_deployment/go1_gym/go1_arx_deploy/: pyzmq-25.0.0-cp36-cp36m-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  remote_pub.py  setup.py
go1_deployment/go1_gym/go1_arx_deploy/docker/: Makefile
go1_deployment/go1_gym/go1_arx_deploy/envs/: arm_ac.py  dog_ac.py  history_wrapper.py  lcm_agent.py
go1_deployment/go1_gym/go1_arx_deploy/lcm_types/: april_message_lcmt.hpp  april_message_lcmt.py  leg_control_data_lcmt.hpp  pd_tau_targets_lcmt.py  vr_command_lcmt.hpp
go1_deployment/go1_gym/go1_arx_deploy/scripts/: deploy_policy_vr.py  send_to_unitree.sh
go1_deployment/go1_gym/go1_arx_deploy/tests/: check_camera_msgs.py
go1_deployment/go1_gym/go1_arx_deploy/unitree_legged_sdk_bin/: CMakeLists.txt  lcm_position_vr.cpp  make.sh
go1_deployment/go1_gym/go1_arx_deploy/unitree_legged_sdk_bin/arx/: CMakeLists.txt
go1_deployment/go1_gym/go1_arx_deploy/unitree_legged_sdk_bin/arx/src/: arx_5v.cpp
go1_deployment/go1_gym/go1_arx_deploy/unitree_legged_sdk_bin/arx/src/App/: arm_control.cpp
go1_deployment/go1_gym/go1_arx_deploy/unitree_legged_sdk_bin/arx/src/Hardware/: math_ops.cpp
go1_deployment/go1_gym/go1_arx_deploy/utils/: cheetah_state_estimator.py  command_profile.py  deployment_runner.py
go2_deployment/go2_gym/: setup.py
go2_deployment/go2_gym/go2_arx_deploy/: remote_pub.py
go2_deployment/go2_gym/go2_arx_deploy/envs/: history_wrapper.py  lcm_agent.py
go2_deployment/go2_gym/go2_arx_deploy/lcm_types/: gripper_lcmt.hpp  gripper_lcmt.lcm  gripper_lcmt.py  leg_control_data_lcmt.py  pd_tau_targets_lcmt.hpp  vr_command_lcmt.lcm  vr_command_lcmt.py
go2_deployment/go2_gym/go2_arx_deploy/scripts/: deploy_policy_vr.py  send_to_unitree.sh
go2_deployment/go2_gym/go2_arx_deploy/tests/: check_camera_msgs.py
go2_deployment/go2_gym/go2_arx_deploy/unitree_legged_sdk_bin/: CMakeLists.txt  deployment_runner.py  lcm_position_vr_go2.cpp  make.sh
go2_deployment/go2_gym/go2_arx_deploy/unitree_legged_sdk_bin/arx/: CMakeLists.txt  arx_can.rules
go2_deployment/go2_gym/go2_arx_deploy/utils/: cheetah_state_estimator.py  command_profile.py
